# JJPWRGEM

./: .gitignore  .gitmodules  .oxfmtrc.json  .oxlintrc.json  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  _typos.toml  bacon.toml  committed.toml  deny.toml  development.md  dist-workspace.toml  hk.pkl  justfile  knip.json  lefthook.yml  mise.toml  npm-shrinkwrap.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  readme.md  release-plz.toml  renovate.json  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.config/: hk.pkl
.config/mise/: config.toml
.config/mise/conf.d/: bench.toml  dev.toml  docs.toml  fuzz.toml  lint.toml  npm.toml  release.toml  test.toml
.config/mise/tasks/: fuzz
.config/tracey/: config.styx
.github/: actionlint.yaml  renovate.json
.github/actions/setup-mise/: action.yml
.github/actions/setup-node/: action.yml
.github/workflows/: benchmarks.yml  host-npm.yml  jjp-release.yml  jjpwrgem-v-release.yml  publish-npm.yml  publish-vscode.yml  release-plz.yml  renovate.yml  verify.yml
benches/: BENCHMARKS.md  Cargo.toml  cli-formatter.md  exponent-perf-notes.md  json.md  mise.toml  number-parsing-perf.md  utf8.md
benches/benches/: bytes2chars.rs  json_common.rs  json_deser.rs  json_iai.rs  json_jsonlines.rs  json_number_normalization.rs  json_prettify.rs  json_tokens.rs  json_uglify.rs
benches/data/: logs.jsonl
benches/docker/: benchmark.sh  dprint.json  mise.toml  readme.md
benches/docker/output/: pretty-canada.md  pretty-citm_catalog.md  pretty-twitter.md  ugly-canada.md  ugly-citm_catalog.md  ugly-twitter.md
benches/lsp/: .gitignore  README.md  benchmark-canada.yaml  benchmark-citm_catalog.yaml  benchmark-small.yaml  benchmark-twitter.yaml  lsp.md  small.json
benches/output/: bytes2chars.md  json_deser.md  json_prettify.md  json_uglify.md
crates/bytes2chars/: BENCHMARKS.md  CHANGELOG.md  Cargo.toml  README.md
crates/bytes2chars/src/: decoder.rs  iter.rs  lib.rs
crates/cli/: commands.rs  error.rs  main.rs  output.rs
crates/json-schema/: Cargo.toml  README.md
crates/json-schema/src/: lib.rs
crates/lsp/: CHANGELOG.md  Cargo.toml  clippy.toml  lsp-demo.cast  readme.md
crates/lsp/src/: backend.rs  lib.rs  range.rs
crates/lsp/src/backend/: diagnostics.rs
crates/parse/: CHANGELOG.md  Cargo.toml  readme.md
crates/parse/src/: ast.rs  check.rs  diagnostics.rs  error.rs  format.rs  jsonlines.rs  lib.rs  tokens.rs  traverse.rs
crates/parse/src/error/: diagnostics.rs
crates/parse/src/format/: prettify.rs  serde.rs  uglify.rs
crates/parse/src/format/serde/: error.rs  uglify.rs
crates/parse/src/tokens/: lexical.rs  number.rs  stream.rs  string.rs
crates/parse/src/traverse/: array.rs  object.rs
crates/ui/: CHANGELOG.md  Cargo.toml
crates/ui/src/: lib.rs  pretty.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: cli_check.rs  parse_then_prettify.rs
fuzz/seeds/cli_check/: multibyte_unterminated_string
fuzz/seeds/nested/: arr_in_obj.json  deep.json
fuzz/seeds/simple_array/: mixed.json
npm-packages/jjpwrgem/: binary-install.js  run-jjp.js
npm-packages/jjpwrgem-vscode/: .vscode-test.mjs  .vscodeignore  CHANGELOG.md  README.md  package.json  tsconfig.json
npm-packages/jjpwrgem-vscode/src/: extension.ts
npm-template/: binary.js  npm-shrinkwrap.json  package.json  package.template.json
spec/: json-schema-v7.md  jsonlines.md  utf8.md
tests/integration/: commands.rs  common.rs  conformance.rs  format_ast.rs  main.rs  prettier_conformance.rs  test_json.rs  utf8_conformance.rs
tests/integration/commands/: check.rs  format.rs  help.rs  jsonlines.rs
tests/integration/snapshots/: check_failure.snap  check_success.snap  format_pretty.snap  format_uglify.snap  integration__commands__check__array_missing_value.snap  integration__commands__check__array_open.snap  integration__commands__check__array_open_with_value.snap  integration__commands__check__check_help.snap  integration__commands__check__closed_curly.snap  integration__commands__check__double_quote.snap  integration__commands__check__empty_input.snap  integration__commands__check__exponent_missing_digits_after_sign.snap  integration__commands__check__exponent_missing_trailing_digits.snap  integration__commands__check__invalid_escaped_curly.snap  integration__commands__check__invalid_hex_digit_in_escape.snap  integration__commands__check__leading_zero_minus_sign_nonzero.snap  integration__commands__check__leading_zero_minus_sign_zero.snap  integration__commands__check__leading_zero_non_zero.snap  integration__commands__check__leading_zero_zero.snap  integration__commands__check__minus_sign.snap  integration__commands__check__missing_fraction.snap  integration__commands__check__negative_fraction_missing_integer.snap  integration__commands__check__no_stdin.snap  integration__commands__check__object_double_open_curly.snap  integration__commands__check__object_empty_then_open.snap  integration__commands__check__object_missing_colon.snap  integration__commands__check__object_missing_colon_with_closed_curly.snap  integration__commands__check__object_missing_colon_with_comma.snap  integration__commands__check__object_missing_colon_with_leading_whitespace.snap  integration__commands__check__object_missing_colon_with_null.snap  (+394 more)
tests/proptest-regressions/: prettier_conformance.txt
xtask/: Cargo.toml
xtask/bench/: mise.toml
xtask/bench/output/: pretty-canada.md  pretty-citm_catalog.md  pretty-twitter.md  ugly-canada.md  ugly-citm_catalog.md  ugly-twitter.md
xtask/src/: badge.rs  bench_table.rs  lsp_bench_report.rs  main.rs  npm.rs  plot.rs  spec_badges.rs  template.rs
xtask/templates/: bench.template.md  bench_hardware.md  bench_inputs.md  bench_summary.md  bytes2chars-bench.template.md  bytes2chars.template.md  cli-formatter-bench.template.md  fixture_canada.md  fixture_citm_catalog.md  fixture_small.md  fixture_twitter.md  install_quick.md  json-bench.template.md  json-schema.template.md  lsp-bench.template.md  lsp_crate.template.md  lsp_features.md  parse.template.md  root.template.md  vscode.template.md
(+1 files in other folders)
