[package]
name = "jjpwrgem"
description = "jjpwrgem json parser with really good error messages"
version = "0.5.4-alpha.7"
edition = "2024"
authors = ["Jacob Asper <jacobasper191@gmail.com>"]
keywords = ["parser", "formatter", "json", "linter"]
categories = ["command-line-utilities", "text-processing", "encoding"]
homepage = "https://github.com/20jasper/jjpwrgem"
repository = "https://github.com/20jasper/jjpwrgem"
license = "MIT"
readme = "readme.md"
include = ["readme.md", "CHANGELOG.md", "crates/cli/**/*.rs"]

[[bin]]
name = "jjp"
path = "crates/cli/main.rs"

[[test]]
name = "integration"
path = "tests/integration/main.rs"


[workspace]
members = [
  "crates/ui",
  "crates/parse",
  "xtask",
  "crates/bytes2chars",
  "benches",
]

[workspace.dependencies]
jjpwrgem-parse = { path = "crates/parse", version = "0.6.0" }
jjpwrgem-ui = { path = "crates/ui", version = "0.2.0" }
displaydoc = "0.2.5"
thiserror = "2.0.17"
rstest = "0.26.1"
rstest_reuse = "0.7.0"
clap = { version = "4.5.53", features = ["derive"] }
itertools = "0.14.0"
bytes2chars = { version = "0.2.1", path = "crates/bytes2chars" }

[dependencies]
anstream = "1"
clap = { workspace = true }
displaydoc = { workspace = true }
jjpwrgem-parse = { workspace = true }
jjpwrgem-ui = { workspace = true }
thiserror = { workspace = true }

# fixes erroneous clippy warnings in 1.92
[patch.crates-io]
displaydoc = { git = "https://github.com/yaahc/displaydoc", rev = "14f7acdba7a15e40097ec57034a3ddd7195286cd" }

[dev-dependencies]
bytes2chars = { workspace = true }
const_format = "0.2.35"

insta = "1.44.3"
rstest = { workspace = true }
rstest_reuse = { workspace = true }

[profile.release]
opt-level = 3

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[lints.clippy]
[lints.rustdoc]
broken_intra_doc_links = "warn"
missing_crate_level_docs = "warn"
