[package]
name = "jjpwrgem-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "=0.4.13"
jjpwrgem-parse = { path = "../crates/parse" }
jjpwrgem-ui = { path = "../crates/ui" }

[[bin]]
name = "parse_then_prettify"
path = "fuzz_targets/parse_then_prettify.rs"
test = false
doc = false
bench = false

[[bin]]
name = "cli_check"
path = "fuzz_targets/cli_check.rs"
test = false
doc = false
bench = false
