[package]
name = "bytes2chars"
version = "0.2.2"
edition.workspace = true
rust-version = "1.85"
authors.workspace = true
description = "lazy utf-8 decoder iterator with rich errors"
license.workspace = true
readme = "README.md"
repository.workspace = true
documentation = "https://docs.rs/bytes2chars"
keywords = ["utf8", "unicode", "iterator", "decoder"]
categories = ["encoding", "no-std"]

[dependencies]
displaydoc.workspace = true

[lints]
workspace = true
