[package]
name = "jjpwrgem-schema"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
displaydoc.workspace = true
jjpwrgem-parse.workspace = true

[lints]
workspace = true

[dev-dependencies]
rstest.workspace = true
