[package]
name = "lsp"
version = "0.1.0"
edition = "2024"
include = ["src/**/*"]

[dependencies]
dashmap = "6"
jjpwrgem-parse = { workspace = true }
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "io-std"] }
tower-lsp-server = "0.23.0"

[dev-dependencies]
rstest.workspace = true
