[package]
name = "jjpwrgem-parse"
version = "0.11.0"
edition = "2024"
license = "MIT"
publish = false

[dependencies]
bytes2chars = { workspace = true }
displaydoc = { workspace = true }
serde = { version = "1", optional = true, features = ["derive"] }
thiserror = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
rstest_reuse = { workspace = true }

[features]
serde = ["dep:serde"]
