[package]
name = "jjpwrgem-parse"
version = "0.11.0"
edition = "2024"
description = "JSON parser and formatter with rich errors"
license = "MIT"
readme = "readme.md"
repository = "https://github.com/20jasper/jjpwrgem"
documentation = "https://docs.rs/jjpwrgem-parse"
keywords = ["json", "parser", "formatter", "diagnostics"]
categories = ["parser-implementations", "text-processing"]

[dependencies]
bytes2chars = { workspace = true }
displaydoc = { workspace = true }
serde = { version = "1", optional = true, features = ["derive"] }
thiserror = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
rstest_reuse = { workspace = true }

[features]
serde = ["dep:serde"]

[lints]
workspace = true
