[package]
name = "jjpwrgem-parse"
version = "0.13.0"
edition.workspace = true
authors.workspace = true
description = "JSON parser and formatter with rich errors"
license.workspace = true
readme = "readme.md"
repository.workspace = true
documentation = "https://docs.rs/jjpwrgem-parse"
keywords = ["json", "parser", "formatter", "diagnostics"]
categories = ["parser-implementations", "text-processing"]

[dependencies]
bytes2chars = { workspace = true }
displaydoc = { workspace = true }
serde = { version = "1.0.228", optional = true, features = ["derive"] }
thiserror = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
rstest_reuse = { workspace = true }

[features]
serde = ["dep:serde"]

[lints]
workspace = true
