[package]
name = "jjpwrgem-ui"
version = "0.3.0"
edition = "2024"
description = "renders jjpwrgem diagnostics"
license = "MIT"
readme = "readme.md"
repository = "https://github.com/20jasper/jjpwrgem"
documentation = "https://docs.rs/jjpwrgem-ui"
keywords = ["json", "diagnostics", "error", "pretty", "report"]
categories = ["command-line-interface", "value-formatting"]

[lib]
test = false
doctest = false

[dependencies]
annotate-snippets = "0.12.16"
jjpwrgem-parse = { workspace = true }

[lints]
workspace = true
