[package]
name = "jjpwrgem-ui"
version = "0.3.1"
edition.workspace = true
authors.workspace = true
description = "renders jjpwrgem diagnostics"
license.workspace = true
readme = "readme.md"
repository.workspace = true
documentation = "https://docs.rs/jjpwrgem-ui"
keywords = ["json", "diagnostics", "error", "pretty", "report"]
categories = ["command-line-interface", "value-formatting"]

[lib]
test = false
doctest = false

[dependencies]
annotate-snippets = "0.12.16"
jjpwrgem-parse = { workspace = true }

[lints]
workspace = true
